  from the internet. He went walkabout! We changed some icons and backgrounds
  to relect that whimsical theme.  
  
  Walkabout (3.3) will be less compatible with the unmaintained 3.1 and with 4.0 (jRuby)
  We have interesting ideas of we what we do with Shoes that may be difficult
  to immplememt in Shoes 4. 
  
-------------- Shoes 3.3.3 ---------------------------------
=== New with 3.3.3

=== Fixed with 3.3.3
  * redirects of http to https - common now a days
    https://github.com/Shoes3/shoes3/issues/304

  
-------------- Shoes 3.3.2 ----------------------------------

=== New with 3.3.2
  * Ruby is updated to 2.2.6 (windows still uses 2.2.4)
  * gems is updated to 2.6.8
  * Profiler with both a GUI and the more traditional text report.
    Written in Shoes and Ruby so you can modify it if you like. 
    https://github.com/Shoes3/shoes3/issues/232
    https://github.com/Shoes3/shoes3/wiki/Profiling
    
  * Shoes.show_console is now Shoes.terminal with many options for size, and
    colors. It can handle some common escape sequences (colors and bolding)  
    On Windows:
      Use Msys>  cshoes.exe
      or install one of those ANSI dll things for your DOS era console. 
      Rumor: Win 10 does support ansi escape sequences on it's console.
      Sometimes Win7 does ok with some escape sequence. 
    On OSX - scrollbars might not show up. page up/down keys and home/end
      and scroll wheel do work.
    Useful for running unit tests of Shoes and other terminal stuff like the
    profiler text report.
    Note: raspbian may have font issues for 'monospace' font.
    https://github.com/Shoes3/shoes3/issues/236
    https://github.com/Shoes3/shoes3/issues/256
    
  * exit should no long be used. Please use Shoes.quit
    https://github.com/Shoes3/shoes3/issues/263
  
  * plot widget (line,bar,scatter, pie charts and radar/spider) 
      https://github.com/Shoes3/shoes3/issues/288
      https://github.com/Shoes3/shoes3/issues/264