@@ -9,10 +9,15 @@
   
 -------------- Shoes 3.3.3 ---------------------------------
 === New with 3.3.3
+  * can specify your own title for ask_open_file and friends
+    https://github.com/Shoes3/shoes3/issues/282
 
 === Fixed with 3.3.3
   * redirects of http to https - common now a days
     https://github.com/Shoes3/shoes3/issues/304
+  * allow some Shoes built in dialogs like ask, confirm, ...
+    to be used before Shoes.app is called.
+    https://github.com/Shoes3/shoes3/issues/303
 
   
 -------------- Shoes 3.3.2 ----------------------------------
